# PrivaGram

./: README.md
PIR/: .gitignore  AddShare.cpp  AddShare.h  CMakeLists.txt  NetworkAdapter.cpp  NetworkAdapter.h  PIR_Client.cpp  PIR_Client.h  PIR_Server.cpp  PIR_Server.h  README.md  SEAL_Client.cpp  SEAL_Client.h  SEAL_Server.cpp  SEAL_Server.h  ShamirShare.cpp  ShamirShare.h  Share.cpp  Share.h  client_runner.cpp  params.h  server_runner.cpp  utils.cpp  utils.h
PIR/keccak/: CMakeLists.txt  KeccakP-1600-SnP.h
PIR/tests/: addshare_test.cpp  he_test.cpp  keccak_test.cpp  pir_test.py  shamirshare_test.cpp
